--- a/rl_exercise_0.ipynb
+++ b/rl_exercise_0.ipynb
@@ -425,7 +425,6 @@
         "\n",
         "\n",
         "def train(model, device, train_loader, optimizer, epoch, writer, criterion):\n",
-        "    print(1)\n",
         "    model.train()\n",
         "    running_loss = 0.0\n",
         "    running_correct = 0.0\n",
@@ -446,10 +445,18 @@
         "        loss = criterion(output, labels)\n",
         "        running_correct += torch.sum(pred == labels.data).cpu().numpy().item()\n",
         "        running_loss += loss.item()\n",
+        "        \n",
+        "        writer.add_scalar('train_loss', loss.item())\n",
+        "        \n",
+        "        \n",
+        "        \n",
         "        loss.backward()\n",
         "        optimizer.step()\n",
-        "\n",
-        "    return round(running_loss / calc_count, 4), round(running_correct / calc_count, 4)\n",
+        "    \n",
+        "    \n",
+        "    accuracy = round(running_correct / calc_count, 4)\n",
+        "    writer.add_scalar('train_accuracy', accuracy)\n",
+        "    return round(running_loss / calc_count, 4), accuracy\n",
         "\n",
         "\n",
         "  \n",
@@ -473,8 +480,12 @@
         "            calc_count += outputs.data.shape[0]\n",
         "            running_correct += torch.sum(pred == labels.data).cpu().numpy().item()\n",
         "            running_loss += loss.item()\n",
-        "\n",
-        "    return round(running_loss / calc_count, 4), round(running_correct / calc_count, 4)\n",
+        "            writer.add_scalar('train_loss', loss.item())\n",
+        "    \n",
+        "    accuracy = round(running_correct / calc_count, 4)\n",
+        "    writer.add_scalar('train_accuracy', accuracy)\n",
+        "    \n",
+        "    return round(running_loss / calc_count, 4), accuracy\n",
         "  \n",
         "  \n",
         "def get_args():\n",
@@ -518,8 +529,8 @@
         "    criterion = nn.CrossEntropyLoss().to(device)\n",
         "    torch.manual_seed(args.seed)\n",
         "    now = datetime.now()\n",
-        "    #writer = SummaryWriter(log_dir=LOG_DIR + '/nminst_' + now.strftime(\"%Y%m%d-%H%M%S\"))\n",
-        "    writer = None\n",
+        "    writer = SummaryWriter(logdir=LOG_DIR + '/nminst_' + now.strftime(\"%Y%m%d-%H%M%S\"))\n",
+        "    \n",
         "\n",
         "    train_loader = get_loader(train=True, batch_size=args.batch_size, use_cuda=use_cuda)\n",
         "    test_loader = get_loader(train=False, batch_size=args.test_batch_size, use_cuda=use_cuda)\n",
@@ -546,14 +557,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 425
+          "height": 745
         },
-        "outputId": "7413c95f-720d-4c78-d891-54131e18f6ea"
+        "outputId": "27012a86-6a65-4e67-bc14-1fa0dab79d63"
       },
       "source": [
         "main()\n"
       ],
-      "execution_count": 0,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
@@ -580,7 +591,25 @@
             "train 0.0008 - 0.9839\n",
             "test 0.0 - 0.9854\n",
             "epoch=6\n",
-            "1\n"
+            "1\n",
+            "train 0.0008 - 0.9852\n",
+            "test 0.0 - 0.9852\n",
+            "epoch=7\n",
+            "1\n",
+            "train 0.0007 - 0.9865\n",
+            "test 0.0 - 0.9864\n",
+            "epoch=8\n",
+            "1\n",
+            "train 0.0006 - 0.9881\n",
+            "test 0.0 - 0.9851\n",
+            "epoch=9\n",
+            "1\n",
+            "train 0.0006 - 0.9885\n",
+            "test 0.0 - 0.9884\n",
+            "epoch=10\n",
+            "1\n",
+            "train 0.0005 - 0.9894\n",
+            "test 0.0 - 0.9866\n"
           ],
           "name": "stdout"
         }
