--- a/dqn_atari.ipynb
+++ b/dqn_atari.ipynb
@@ -166,7 +166,9 @@
         "\n",
         "    def _observation(self, img):\n",
         "        \"\"\"what happens to each observation\"\"\"\n",
+        "        #img = img[31:189, 7:152, :]\n",
         "        \n",
+        "        #img = resize(img, self.img_size)\n",
         "        # Here's what you need to do:\n",
         "        #  * crop image, remove irrelevant parts\n",
         "        #  * resize image to self.img_size \n",
@@ -190,7 +192,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 298
         },
-        "outputId": "1cb3a1db-928e-42f3-d7e7-00cf893027e1"
+        "outputId": "6235b034-caef-4ed1-d95e-bbe4cd044e1a"
       },
       "source": [
         "import gym\n",
@@ -218,7 +220,7 @@
         "plt.imshow(obs[...,0],interpolation='none',cmap='gray');\n",
         "\n"
       ],
-      "execution_count": 7,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "stream",
@@ -246,32 +248,81 @@
       "metadata": {
         "id": "vicMFV7wQen9",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 102
-        },
-        "outputId": "1bc5efb0-ef01-4888-f1e2-020309ed15d3"
+        "colab": {}
       },
       "source": [
-        "obs[32][8],obs[32][151],obs[188][8], obs[188][151], obs.shape"
+        "#obs[32][8],obs[32][151],obs[188][8], obs[188][151], obs.shape\n",
+        "#resize(obs, None, (64, 64) + (1,))\n",
+        "import  numpy as np \n",
+        "import cv2\n",
+        "dst = np.zeros((3, 50, 50))\n",
+        "#resized_patch = cv2.resize(obs, (3, 50, 50), dst=dst, fx=0, fy=0, interpolation=cv2.INTER_AREA)\n",
+        "#res = cv2.resize(obs,None,fx=2, fy=2, interpolation = cv2.INTER_CUBIC)\n",
+        "?cv2.resize"
       ],
-      "execution_count": 71,
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Pan3JyvCYtJf",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 81
+        },
+        "outputId": "8810f04d-5347-439f-ceba-84d98ccdfe37"
+      },
+      "source": [
+        "dst = np.zeros((64, 64) + (1,))\n",
+        "#resize(obs, dst, (1,1), 0, 0, cv2.INTER_AREA)\n",
+        "#res = cv2.resize(obs, None,(64, 64),0,0, cv2.INTER_AREA)\n",
+        "#cv2.resize(obs, dst, (64, 64) + (1,), 0, 0, cv2.INTER_CUBIC)\n",
+        "import torchvision.transforms as T\n",
+        "from PIL import Image\n",
+        "\n",
+        "T.Resize((64, 64) + (1,), interpolation=2)(Image.fromarray(obs))"
+      ],
+      "execution_count": 133,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAIAAAAlC+aJAAADYUlEQVR4nO2aTWvjRhyH//MiyVKM\ncRS6AWcpcW4xKo2CF9KDDz6Zfooecs6n6bnfIl8gFHpZQUhCNt6krKlZe1lCFGNqWarmpQcrttu1\nF4W2O3aZ52QGeeb3SJ4Zz4wA1hyU/9L9/f1KpZIkCcaYEHJ+fg4Avu9zzoUQlmX1+/3b21vf90ul\nUpIkhmEwxoIgiOP4b1UVCoV6vU4pTdMUAIbD4fX1tRBiWbtbW1sL6wEAnF/A87xGoxGGYbFYbLVa\nruu6rttqtYrFYhiGjUbD8zxCyNHRke/7/X5/d3e32Wzatv1pVbZtN5vNg4MD27Zt27YsC6Glt9Lz\nvGX1AADNLwAAUso4jie3bUqapnEcSymnJUKIOI4558vqGY/HZ2dnk9z1en0wGFxeXn7m+s9ALcvK\neWm320UI1Wo1QkgQBEmSAEAQBI7j1Gq1m5ubbrdrGEa73S6Xy4eHh6PR6OLiAgA+bcKyLEqpYRgI\nobu7u8FgMPm8rN1JWwujopOTk/y6KwitVquqM/wjntGJV5O1F8hGISFEr9eLokhtmpw4jrOzs4Mx\nhqkAY+z09LTT6SgNlpdqtXp8fGyaJszPA5xzxpi6VM9gfsZY+z6gBVSjBVSTjUIGxj/s7bGNDbVp\nckK3tw2c3fpMgCD03YuvSiZRl+oZDMvuG4Qmy5+neQCD3IqFvR4zsXSc6W9/NpHJAhOwHhOZLMxy\nTgXkyE4FWbDoXEHGZgqQLQBnTyC1BKGLl9WrRkpmOTMBiSF6wVKaLvnKapEyJn/PnsGTAMBHbAns\nqMyVG4xnq+NMgAO6kuXHuZ2FVWZTln1AkyH/qQ8IzDvfsj/Wow9wE4OLJ5tyUwHC333DH0sKY+WH\nbw6h/AaIgLklZdr59af370OlwfLy8qX76qBOCIFZJ5b88eH1xw/vlAbLy4a9J6UPQOB/8G9UC6hG\nC6hGC6hGC6hGC6hGC6hGC6hGC6hGC6hGC6hGC6hGC6hGC6iG/mamAMCAJfjLHQ7sFov+5uZ8ScTY\nz/f3Ub7XZcwk2e71TMMAAHrlJADAaTrCX+5w4GvH+b5SmS95SJLXYZhToBBF1Xa7MNmdfri6AwDB\nWDoa/xdZF/LL/X0Q/mUrX0oZ535vtBdFP759SxECAIRpdjovuIA1OWLSaP5F/gQpAEcdDcFXOQAA\nAABJRU5ErkJggg==\n",
             "text/plain": [
-              "(array([0, 0, 0], dtype=uint8),\n",
-              " array([0, 0, 0], dtype=uint8),\n",
-              " array([0, 0, 0], dtype=uint8),\n",
-              " array([0, 0, 0], dtype=uint8),\n",
-              " (210, 160, 3))"
+              "<PIL.Image.Image image mode=RGB size=64x64 at 0x7FD0AFE42860>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 71
+          "execution_count": 133
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7HB9Kag2Xj65",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "18781d23-25a9-476c-990e-0bb69b935ee4"
+      },
+      "source": [
+        "!pip install numpy"
+      ],
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (1.16.4)\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
