--- a/Project_SOKOBANchallenge.ipynb
+++ b/Project_SOKOBANchallenge.ipynb
@@ -88,13 +88,23 @@
         "id": "DbOqA9qYNYBo"
       },
       "source": [
-        "env = gym.make(\"Sokoban-v1\")\n",
+        "env = gym.make(\"PushAndPull-Sokoban-v2\")\n",
         "screen = env.render(mode='rgb_array')\n",
-        "print(screen.shape)\n",
+        "print(screen.shape)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b-aVN4BGXmgs"
+      },
+      "source": [
         "plt.imshow(screen)\n",
-        "observation = env.reset()\n",
-        "ipythondisplay.clear_output(wait=True)\n",
-        "ipythondisplay.display(plt.gcf())"
+        "# observation = env.reset()\n",
+        "# ipythondisplay.clear_output(wait=True)\n",
+        "# ipythondisplay.display(plt.gcf())"
       ],
       "execution_count": null,
       "outputs": []
@@ -105,7 +115,7 @@
         "id": "EdYfjj-vNoX5"
       },
       "source": [
-        "print(screen[150][150])\n",
+        "\n",
         "print(screen[80][80])\n",
         "print(screen[60][40])\n",
         "print(screen[30][70])\n",
@@ -123,15 +133,16 @@
         "pd = Display()\n",
         "pd.start()\n",
         "\n",
-        "\n",
         "directory = './video'\n",
         "env = gym.wrappers.Monitor(env, \"recording\",force=True)\n",
         "env.render(mode='human')\n",
         "env.reset()\n",
+        "rewards = []\n",
         "for _ in range(100):\n",
         "    action = env.action_space.sample()\n",
         "    #print(action)\n",
         "    state, reward, done, info = env.step(action) \n",
+        "    rewards.append(reward)\n",
         "    screen = env.render(mode='rgb_array')\n",
         "    plt.imshow(screen)\n",
         "    ipythondisplay.clear_output(wait=True)\n",
@@ -139,6 +150,41 @@
         "    if done:\n",
         "        env.reset()\n",
         "        print('done')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WNu9CDKNYXIv"
+      },
+      "source": [
+        "len(rewards)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Aym7pOFYYZFX"
+      },
+      "source": [
+        "from skimage import color\n",
+        "img = color.rgb2gray(screen)\n",
+        "plt.imshow(img)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kloUZ8tHZdB7"
+      },
+      "source": [
+        "plt.imshow(screen)"
       ],
       "execution_count": null,
       "outputs": []
