--- a/Project_SOKOBANchallenge.ipynb
+++ b/Project_SOKOBANchallenge.ipynb
@@ -304,8 +304,13 @@
         "def get_screen():\n",
         "    screen = env.render(mode='rgb_array')#.transpose((2, 0, 1))\n",
         "    #screen = color.rgb2gray(screen)\n",
-        "    return resize(screen).unsqueeze(0)\n",
+        "    return resize(screen)\n",
         "    \n",
+        "\n",
+        "\n",
+        "plt.gray()\n",
+        "plt.imshow(get_screen().cpu().squeeze(0).numpy())\n",
+        "plt.show()\n",
         "\n",
         "\n",
         "# env.reset()\n",
