--- a/Project_SOKOBANchallenge.ipynb
+++ b/Project_SOKOBANchallenge.ipynb
@@ -295,7 +295,7 @@
       "source": [
         "resize = T.Compose([\n",
         "                    T.ToPILImage(),\n",
-        "                    T.Grayscale(num_output_channels=1),\n",
+        "                    #T.Grayscale(num_output_channels=1),\n",
         "                    T.Resize(80, interpolation=Image.CUBIC),\n",
         "                    T.ToTensor()])\n",
         "\n",
@@ -308,9 +308,9 @@
         "    \n",
         "\n",
         "\n",
-        "plt.gray()\n",
-        "plt.imshow(get_screen().cpu().squeeze(0).numpy())\n",
-        "plt.show()\n",
+        "# plt.gray()\n",
+        "# plt.imshow(get_screen().cpu().squeeze(0).numpy())\n",
+        "# plt.show()\n",
         "\n",
         "\n",
         "# env.reset()\n",
@@ -319,6 +319,17 @@
         "#            interpolation='none')\n",
         "# plt.title('Example extracted screen')\n",
         "# plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U-owDMAflLRa"
+      },
+      "source": [
+        "get_screen().shape"
       ],
       "execution_count": null,
       "outputs": []
@@ -346,6 +357,243 @@
         "plt.gray()\n",
         "plt.imshow(ii.squeeze(0).numpy())\n",
         "plt.show()\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rUc-gABhkwNu"
+      },
+      "source": [
+        "BATCH_SIZE = 128\n",
+        "GAMMA = 0.999\n",
+        "EPS_START = 0.9\n",
+        "EPS_END = 0.05\n",
+        "EPS_DECAY = 200\n",
+        "TARGET_UPDATE = 10\n",
+        "\n",
+        "# Get screen size so that we can initialize layers correctly based on shape\n",
+        "# returned from AI gym. Typical dimensions at this point are close to 3x40x90\n",
+        "# which is the result of a clamped and down-scaled render buffer in get_screen()\n",
+        "init_screen = get_screen()\n",
+        "\n",
+        "_, screen_height, screen_width = init_screen.shape\n",
+        "\n",
+        "# Get number of actions from gym action space\n",
+        "n_actions = env.action_space.n\n",
+        "\n",
+        "policy_net = DQN(screen_height, screen_width, n_actions).to(device)\n",
+        "target_net = DQN(screen_height, screen_width, n_actions).to(device)\n",
+        "target_net.load_state_dict(policy_net.state_dict())\n",
+        "target_net.eval()\n",
+        "\n",
+        "optimizer = optim.RMSprop(policy_net.parameters())\n",
+        "memory = ReplayMemory(10000)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WIpjRSxMl4FY"
+      },
+      "source": [
+        "init_screen.shape"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7UZDLE0tlwW_"
+      },
+      "source": [
+        "\n",
+        "steps_done = 0\n",
+        "\n",
+        "def select_action(state):\n",
+        "    global steps_done\n",
+        "    sample = random.random()\n",
+        "    eps_threshold = EPS_END + (EPS_START - EPS_END) * \\\n",
+        "        math.exp(-1. * steps_done / EPS_DECAY)\n",
+        "    steps_done += 1\n",
+        "    if sample > eps_threshold:\n",
+        "        with torch.no_grad():\n",
+        "            # t.max(1) will return largest column value of each row.\n",
+        "            # second column on max result is index of where max element was\n",
+        "            # found, so we pick action with the larger expected reward.\n",
+        "            return policy_net(state).max(1)[1].view(1, 1)\n",
+        "    else:\n",
+        "        return torch.tensor([[random.randrange(n_actions)]], device=device, dtype=torch.long)\n",
+        "\n",
+        "\n",
+        "episode_durations = []\n",
+        "\n",
+        "\n",
+        "def plot_durations():\n",
+        "    plt.figure(2)\n",
+        "    plt.clf()\n",
+        "    durations_t = torch.tensor(episode_durations, dtype=torch.float)\n",
+        "    plt.title('Training...')\n",
+        "    plt.xlabel('Episode')\n",
+        "    plt.ylabel('Duration')\n",
+        "    plt.plot(durations_t.numpy())\n",
+        "    # Take 100 episode averages and plot them too\n",
+        "    if len(durations_t) >= 100:\n",
+        "        means = durations_t.unfold(0, 100, 1).mean(1).view(-1)\n",
+        "        means = torch.cat((torch.zeros(99), means))\n",
+        "        plt.plot(means.numpy())\n",
+        "\n",
+        "    plt.pause(0.001)  # pause a bit so that plots are updated\n",
+        "    if is_ipython:\n",
+        "        display.clear_output(wait=True)\n",
+        "        display.display(plt.gcf())"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BJu43wD5ox-F"
+      },
+      "source": [
+        "def optimize_model():\n",
+        "    if len(memory) < BATCH_SIZE:\n",
+        "        return\n",
+        "    transitions = memory.sample(BATCH_SIZE)\n",
+        "    # Transpose the batch (see https://stackoverflow.com/a/19343/3343043 for\n",
+        "    # detailed explanation). This converts batch-array of Transitions\n",
+        "    # to Transition of batch-arrays.\n",
+        "    batch = Transition(*zip(*transitions))\n",
+        "\n",
+        "    # Compute a mask of non-final states and concatenate the batch elements\n",
+        "    # (a final state would've been the one after which simulation ended)\n",
+        "    non_final_mask = torch.tensor(tuple(map(lambda s: s is not None,\n",
+        "                                          batch.next_state)), device=device, dtype=torch.bool)\n",
+        "    non_final_next_states = torch.cat([s for s in batch.next_state\n",
+        "                                                if s is not None])\n",
+        "    state_batch = torch.cat(batch.state)\n",
+        "    action_batch = torch.cat(batch.action)\n",
+        "    reward_batch = torch.cat(batch.reward)\n",
+        "\n",
+        "    # Compute Q(s_t, a) - the model computes Q(s_t), then we select the\n",
+        "    # columns of actions taken. These are the actions which would've been taken\n",
+        "    # for each batch state according to policy_net\n",
+        "    state_action_values = policy_net(state_batch).gather(1, action_batch)\n",
+        "\n",
+        "    # Compute V(s_{t+1}) for all next states.\n",
+        "    # Expected values of actions for non_final_next_states are computed based\n",
+        "    # on the \"older\" target_net; selecting their best reward with max(1)[0].\n",
+        "    # This is merged based on the mask, such that we'll have either the expected\n",
+        "    # state value or 0 in case the state was final.\n",
+        "    next_state_values = torch.zeros(BATCH_SIZE, device=device)\n",
+        "    next_state_values[non_final_mask] = target_net(non_final_next_states).max(1)[0].detach()\n",
+        "    # Compute the expected Q values\n",
+        "    expected_state_action_values = (next_state_values * GAMMA) + reward_batch\n",
+        "\n",
+        "    # Compute Huber loss\n",
+        "    criterion = nn.SmoothL1Loss()\n",
+        "    loss = criterion(state_action_values, expected_state_action_values.unsqueeze(1))\n",
+        "\n",
+        "    # Optimize the model\n",
+        "    optimizer.zero_grad()\n",
+        "    loss.backward()\n",
+        "    for param in policy_net.parameters():\n",
+        "        param.grad.data.clamp_(-1, 1)\n",
+        "    optimizer.step()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "k4tX-KDmo2ND"
+      },
+      "source": [
+        "num_episodes = 50\n",
+        "for i_episode in range(num_episodes):\n",
+        "    # Initialize the environment and state\n",
+        "    env.reset()\n",
+        "    #last_screen = get_screen().unsqueeze(0)\n",
+        "    state = get_screen().unsqueeze(0)\n",
+        "    # state = current_screen - last_screen\n",
+        "    for t in count():\n",
+        "        # Select and perform an action\n",
+        "        action = select_action(state)\n",
+        "        \n",
+        "        _, reward, done, _ = env.step(action.item())\n",
+        "        reward = torch.tensor([reward], device=device)\n",
+        "\n",
+        "#         # Observe new state\n",
+        "#         last_screen = current_screen\n",
+        "        next_state = get_screen().unsqueeze(0)\n",
+        "        if not done:\n",
+        "          pass\n",
+        "            #next_state = current_screen - last_screen\n",
+        "        else:\n",
+        "            next_state = None\n",
+        "\n",
+        "#         # Store the transition in memory\n",
+        "        memory.push(state, action, next_state, reward)\n",
+        "\n",
+        "#         # Move to the next state\n",
+        "        state = next_state\n",
+        "\n",
+        "#         # Perform one step of the optimization (on the policy network)\n",
+        "        optimize_model()\n",
+        "        if done:\n",
+        "            episode_durations.append(t + 1)\n",
+        "            plot_durations()\n",
+        "            break\n",
+        "    # Update the target network, copying all weights and biases in DQN\n",
+        "    if i_episode % TARGET_UPDATE == 0:\n",
+        "        target_net.load_state_dict(policy_net.state_dict())\n",
+        "\n",
+        "print('Complete')\n",
+        "env.render()\n",
+        "env.close()\n",
+        "plt.ioff()\n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ExmM9Ltlp205"
+      },
+      "source": [
+        "state = get_screen().unsqueeze(0)\n",
+        "state.shape"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5Yv5e_AUp8no"
+      },
+      "source": [
+        "policy_net(state)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6PJxwfrhqiOF"
+      },
+      "source": [
+        "state.shape"
       ],
       "execution_count": null,
       "outputs": []
