--- a/Project_SOKOBANchallenge.ipynb
+++ b/Project_SOKOBANchallenge.ipynb
@@ -126,6 +126,17 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "hQ4QU1xYrzMX"
+      },
+      "source": [
+        "screen.shape"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "b-aVN4BGXmgs"
       },
       "source": [
@@ -185,7 +196,8 @@
       "source": [
         "from skimage import color\n",
         "# img = color.rgb2gray(screen)\n",
-        "# plt.imshow(img)"
+        "# plt.imshow(img)\n",
+        "screen.shape"
       ],
       "execution_count": null,
       "outputs": []
@@ -318,7 +330,13 @@
         "# plt.imshow(get_screen().cpu().squeeze(0).permute(1, 2, 0).numpy(),\n",
         "#            interpolation='none')\n",
         "# plt.title('Example extracted screen')\n",
-        "# plt.show()"
+        "# plt.show()\n",
+        "\n",
+        "i2 = get_screen().permute(1,2,0)\n",
+        "\n",
+        "plt.imshow(i2.numpy())\n",
+        "\n",
+        "#get_screen().permute(1,2,0).shape"
       ],
       "execution_count": null,
       "outputs": []
