--- a/Project_SOKOBANchallenge.ipynb
+++ b/Project_SOKOBANchallenge.ipynb
@@ -105,7 +105,14 @@
         "import torch.nn as nn\n",
         "import torch.optim as optim\n",
         "import torch.nn.functional as F\n",
-        "import torchvision.transforms as T"
+        "import torchvision.transforms as T\n",
+        "\n",
+        "\n",
+        "is_ipython = 'inline' in matplotlib.get_backend()\n",
+        "if is_ipython:\n",
+        "    from IPython import display\n",
+        "\n",
+        "plt.ion()"
       ],
       "execution_count": null,
       "outputs": []
@@ -344,23 +351,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "U-owDMAflLRa"
-      },
-      "source": [
-        "get_screen().shape"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "dSVV6fr1feIt"
       },
       "source": [
-        "plt.figure()\n",
-        "ii = get_screen().squeeze(0)\n",
-        "ii.shape\n",
+        "# plt.figure()\n",
+        "# ii = get_screen().squeeze(0)\n",
+        "# ii.shape\n",
         "# plt.imshow(ii.permute(1, 2, 0).numpy(),interpolation='none')"
       ],
       "execution_count": null,
@@ -372,9 +368,9 @@
         "id": "oCRTUzLZhJ3f"
       },
       "source": [
-        "plt.gray()\n",
-        "plt.imshow(ii.squeeze(0).numpy())\n",
-        "plt.show()\n"
+        "# plt.gray()\n",
+        "# plt.imshow(ii.squeeze(0).numpy())\n",
+        "# plt.show()\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -536,6 +532,8 @@
       "source": [
         "num_episodes = 50\n",
         "for i_episode in range(num_episodes):\n",
+        "\n",
+        "  #print(i_episode)\n",
         "    # Initialize the environment and state\n",
         "    env.reset()\n",
         "    #last_screen = get_screen().unsqueeze(0)\n",
