--- a/Project_SOKOBANchallenge.ipynb
+++ b/Project_SOKOBANchallenge.ipynb
@@ -381,7 +381,7 @@
         "id": "rUc-gABhkwNu"
       },
       "source": [
-        "BATCH_SIZE = 128\n",
+        "BATCH_SIZE = 50\n",
         "GAMMA = 0.999\n",
         "EPS_START = 0.9\n",
         "EPS_END = 0.05\n",
@@ -404,7 +404,7 @@
         "target_net.eval()\n",
         "\n",
         "optimizer = optim.RMSprop(policy_net.parameters())\n",
-        "memory = ReplayMemory(10000)"
+        "memory = ReplayMemory(200)"
       ],
       "execution_count": null,
       "outputs": []
@@ -416,6 +416,25 @@
       },
       "source": [
         "init_screen.shape"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_5xYU_YC1q6y"
+      },
+      "source": [
+        "\n",
+        "steps_done += 10\n",
+        "# # # EPS_END + (EPS_START - EPS_END) * math.exp(-1. * steps_done / EPS_DECAY), steps_done, random.random()\n",
+        "# # state = get_screen().unsqueeze(0)\n",
+        "# # state.shape\n",
+        "\n",
+        "# # select_action(state), policy_net(state).max(1)[1].view(1, 1)\n",
+        "\n",
+        "EPS_END + (EPS_START - EPS_END) * math.exp(-1. * steps_done / EPS_DECAY), random.random()"
       ],
       "execution_count": null,
       "outputs": []
@@ -466,6 +485,17 @@
         "    if is_ipython:\n",
         "        display.clear_output(wait=True)\n",
         "        display.display(plt.gcf())"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jPIhfLYmvZf6"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -533,7 +563,7 @@
         "num_episodes = 50\n",
         "for i_episode in range(num_episodes):\n",
         "\n",
-        "  #print(i_episode)\n",
+        "    print(i_episode)\n",
         "    # Initialize the environment and state\n",
         "    env.reset()\n",
         "    #last_screen = get_screen().unsqueeze(0)\n",
@@ -583,11 +613,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ExmM9Ltlp205"
+        "id": "tx5MaYZAuWrs"
       },
       "source": [
-        "state = get_screen().unsqueeze(0)\n",
-        "state.shape"
+        "x = env.reset()"
       ],
       "execution_count": null,
       "outputs": []
@@ -595,10 +624,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5Yv5e_AUp8no"
+        "id": "NOl5Tinsw9PK"
       },
       "source": [
-        "policy_net(state)"
+        "state = get_screen().unsqueeze(0)"
       ],
       "execution_count": null,
       "outputs": []
@@ -606,10 +635,134 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6PJxwfrhqiOF"
+        "id": "jbCa03u6w-hR"
       },
       "source": [
-        "state.shape"
+        "state.shape\n",
+        "\n",
+        "\n",
+        "i2 = state.squeeze(0).permute(1,2,0)\n",
+        "\n",
+        "plt.imshow(i2.numpy())"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "I1Z0PUBHxKJv"
+      },
+      "source": [
+        "action = select_action(state)\n",
+        "action"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ik0zCGHjyIBb"
+      },
+      "source": [
+        "action = torch.tensor(5)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yW6UQ-_8xRRB"
+      },
+      "source": [
+        "_, reward, done, _ = env.step(action.item())\n",
+        "reward"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5LWCgKZnxmJM"
+      },
+      "source": [
+        "state = get_screen().unsqueeze(0)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "i_22pnY9xo3V"
+      },
+      "source": [
+        "\n",
+        "i2 = state.squeeze(0).permute(1,2,0)\n",
+        "\n",
+        "plt.imshow(i2.numpy())"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "B7grAme7x5vc"
+      },
+      "source": [
+        "EPS_END + (EPS_START - EPS_END) * math.exp(-1. * steps_done / EPS_DECAY), steps_done"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6LPZrpe8yFxA"
+      },
+      "source": [
+        "# BATCH_SIZE = 128\n",
+        "# GAMMA = 0.999\n",
+        "# EPS_START = 0.9\n",
+        "# EPS_END = 0.05\n",
+        "# EPS_DECAY = 10\n",
+        "# TARGET_UPDATE = 10\n",
+        "# import math \n",
+        "# steps_done =1\n",
+        "# eps_threshold = EPS_END + (EPS_START - EPS_END) * math.exp(-1. * steps_done / EPS_DECAY)\n",
+        "\n",
+        "# eps_threshold"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MiwnDvm11CQo"
+      },
+      "source": [
+        "(EPS_START - EPS_END) * math.exp(-1. * 0 / EPS_DECAY)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QslnYK_Hyfq7"
+      },
+      "source": [
+        "EPS_END1 = 0.1\n",
+        "steps_done = 10\n",
+        "x1 = EPS_END1\n",
+        "x2 = (EPS_START - EPS_END1) * math.exp(-1. * steps_done / EPS_DECAY)\n",
+        "\n",
+        "x1, x2, x1 + x2"
       ],
       "execution_count": null,
       "outputs": []
