--- a/Project_SOKOBANchallenge.ipynb
+++ b/Project_SOKOBANchallenge.ipynb
@@ -381,11 +381,11 @@
         "id": "rUc-gABhkwNu"
       },
       "source": [
-        "BATCH_SIZE = 50\n",
+        "BATCH_SIZE = 250\n",
         "GAMMA = 0.999\n",
         "EPS_START = 0.9\n",
         "EPS_END = 0.05\n",
-        "EPS_DECAY = 200\n",
+        "EPS_DECAY = 500\n",
         "TARGET_UPDATE = 10\n",
         "\n",
         "# Get screen size so that we can initialize layers correctly based on shape\n",
@@ -404,7 +404,7 @@
         "target_net.eval()\n",
         "\n",
         "optimizer = optim.RMSprop(policy_net.parameters())\n",
-        "memory = ReplayMemory(200)"
+        "memory = ReplayMemory(1000)"
       ],
       "execution_count": null,
       "outputs": []
@@ -427,14 +427,23 @@
       },
       "source": [
         "\n",
-        "steps_done += 10\n",
-        "# # # EPS_END + (EPS_START - EPS_END) * math.exp(-1. * steps_done / EPS_DECAY), steps_done, random.random()\n",
-        "# # state = get_screen().unsqueeze(0)\n",
-        "# # state.shape\n",
+        "# steps_done += 10\n",
+        "# # # # EPS_END + (EPS_START - EPS_END) * math.exp(-1. * steps_done / EPS_DECAY), steps_done, random.random()\n",
+        "# # # state = get_screen().unsqueeze(0)\n",
+        "# # # state.shape\n",
         "\n",
-        "# # select_action(state), policy_net(state).max(1)[1].view(1, 1)\n",
+        "# # # select_action(state), policy_net(state).max(1)[1].view(1, 1)\n",
         "\n",
-        "EPS_END + (EPS_START - EPS_END) * math.exp(-1. * steps_done / EPS_DECAY), random.random()"
+        "# EPS_END + (EPS_START - EPS_END) * math.exp(-1. * steps_done / EPS_DECAY), random.random()\n",
+        "\n",
+        "# EPS_DECAY2 = 500\n",
+        "prev = 1.0\n",
+        "for i in range(10000):\n",
+        "  eps_threshold = EPS_END + (EPS_START - EPS_END) * math.exp(-1. * i / EPS_DECAY)\n",
+        "\n",
+        "  if prev - eps_threshold >= 0.1:\n",
+        "    print((i, eps_threshold))\n",
+        "    prev = eps_threshold"
       ],
       "execution_count": null,
       "outputs": []
@@ -445,8 +454,6 @@
         "id": "7UZDLE0tlwW_"
       },
       "source": [
-        "\n",
-        "steps_done = 0\n",
         "\n",
         "def select_action(state):\n",
         "    global steps_done\n",
@@ -464,7 +471,6 @@
         "        return torch.tensor([[random.randrange(n_actions)]], device=device, dtype=torch.long)\n",
         "\n",
         "\n",
-        "episode_durations = []\n",
         "\n",
         "\n",
         "def plot_durations():\n",
@@ -560,9 +566,14 @@
         "id": "k4tX-KDmo2ND"
       },
       "source": [
-        "num_episodes = 50\n",
+        "num_episodes = 10000\n",
+        "episode_durations = []\n",
+        "steps_done = 0\n",
+        "\n",
+        "eps_to_actions = {}\n",
         "for i_episode in range(num_episodes):\n",
         "\n",
+        "    eps_to_actions[i_episode] = []\n",
         "    print(i_episode)\n",
         "    # Initialize the environment and state\n",
         "    env.reset()\n",
@@ -573,14 +584,20 @@
         "        # Select and perform an action\n",
         "        action = select_action(state)\n",
         "        \n",
+        "        eps_to_actions[i_episode].append(action)\n",
         "        _, reward, done, _ = env.step(action.item())\n",
         "        reward = torch.tensor([reward], device=device)\n",
         "\n",
         "#         # Observe new state\n",
         "#         last_screen = current_screen\n",
         "        next_state = get_screen().unsqueeze(0)\n",
+        "\n",
         "        if not done:\n",
-        "          pass\n",
+        "          \n",
+        "            diff = torch.sum(next_state - state).detach().cpu().numpy().item()\n",
+        "            if diff == 0:\n",
+        "              reward = torch.tensor([-0.2], device=device)\n",
+        "\n",
         "            #next_state = current_screen - last_screen\n",
         "        else:\n",
         "            next_state = None\n",
@@ -651,6 +668,17 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "giIvlTJU6q1P"
+      },
+      "source": [
+        "policy_net(state)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "I1Z0PUBHxKJv"
       },
       "source": [
@@ -666,7 +694,7 @@
         "id": "Ik0zCGHjyIBb"
       },
       "source": [
-        "action = torch.tensor(5)"
+        "# action = torch.tensor(5)"
       ],
       "execution_count": null,
       "outputs": []
@@ -689,7 +717,18 @@
         "id": "5LWCgKZnxmJM"
       },
       "source": [
-        "state = get_screen().unsqueeze(0)"
+        "next_state = get_screen().unsqueeze(0)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "71USqc_m62FS"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -757,12 +796,63 @@
         "id": "QslnYK_Hyfq7"
       },
       "source": [
-        "EPS_END1 = 0.1\n",
-        "steps_done = 10\n",
-        "x1 = EPS_END1\n",
-        "x2 = (EPS_START - EPS_END1) * math.exp(-1. * steps_done / EPS_DECAY)\n",
-        "\n",
-        "x1, x2, x1 + x2"
+        "(EPS_START - EPS_END) * math.exp(-1. * steps_done / EPS_DECAY)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qhSr1w1Q4MYk"
+      },
+      "source": [
+        "eps_to_actions[1][0:30]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8K6miGIt5Wkb"
+      },
+      "source": [
+        "eps_to_actions[0][0:20]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5xUXlJ-J6Tiv"
+      },
+      "source": [
+        "_, reward, done, _ = env.step(action.item())\n",
+        "reward"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6EWCTuUe8mgH"
+      },
+      "source": [
+        "torch.tensor([reward], device=device).detach().cpu().numpy().dtype"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RryY9rg68oUf"
+      },
+      "source": [
+        "episode_durations"
       ],
       "execution_count": null,
       "outputs": []
