--- a/Project_SOKOBANchallenge.ipynb
+++ b/Project_SOKOBANchallenge.ipynb
@@ -278,7 +278,7 @@
         "\n",
         "    def __init__(self, h, w, outputs):\n",
         "        super(DQN, self).__init__()\n",
-        "        self.conv1 = nn.Conv2d(3, 16, kernel_size=5, stride=2)\n",
+        "        self.conv1 = nn.Conv2d(1, 16, kernel_size=5, stride=2)\n",
         "        self.bn1 = nn.BatchNorm2d(16)\n",
         "        self.conv2 = nn.Conv2d(16, 32, kernel_size=5, stride=2)\n",
         "        self.bn2 = nn.BatchNorm2d(32)\n",
@@ -314,7 +314,7 @@
       "source": [
         "resize = T.Compose([\n",
         "                    T.ToPILImage(),\n",
-        "                    #T.Grayscale(num_output_channels=1),\n",
+        "                    T.Grayscale(num_output_channels=1),\n",
         "                    T.Resize(80, interpolation=Image.CUBIC),\n",
         "                    T.ToTensor()])\n",
         "\n",
@@ -339,9 +339,9 @@
         "# plt.title('Example extracted screen')\n",
         "# plt.show()\n",
         "\n",
-        "i2 = get_screen().permute(1,2,0)\n",
+        "# i2 = get_screen().permute(1,2,0)\n",
         "\n",
-        "plt.imshow(i2.numpy())\n",
+        "# plt.imshow(i2.numpy())\n",
         "\n",
         "#get_screen().permute(1,2,0).shape"
       ],
@@ -381,11 +381,11 @@
         "id": "rUc-gABhkwNu"
       },
       "source": [
-        "BATCH_SIZE = 250\n",
-        "GAMMA = 0.999\n",
-        "EPS_START = 0.9\n",
+        "BATCH_SIZE = 32\n",
+        "GAMMA = 0.9\n",
+        "EPS_START = 1.0\n",
         "EPS_END = 0.05\n",
-        "EPS_DECAY = 500\n",
+        "EPS_DECAY = 60000\n",
         "TARGET_UPDATE = 10\n",
         "\n",
         "# Get screen size so that we can initialize layers correctly based on shape\n",
@@ -403,8 +403,9 @@
         "target_net.load_state_dict(policy_net.state_dict())\n",
         "target_net.eval()\n",
         "\n",
-        "optimizer = optim.RMSprop(policy_net.parameters())\n",
-        "memory = ReplayMemory(1000)"
+        "#optimizer = optim.RMSprop(policy_net.parameters())\n",
+        "optimizer = optim.Adam(policy_net.parameters(), lr=0.001)\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -436,9 +437,10 @@
         "\n",
         "# EPS_END + (EPS_START - EPS_END) * math.exp(-1. * steps_done / EPS_DECAY), random.random()\n",
         "\n",
-        "# EPS_DECAY2 = 500\n",
+        "# EPS_DECAY2 = 60000\n",
         "prev = 1.0\n",
-        "for i in range(10000):\n",
+        "\n",
+        "for i in range(100000):\n",
         "  eps_threshold = EPS_END + (EPS_START - EPS_END) * math.exp(-1. * i / EPS_DECAY)\n",
         "\n",
         "  if prev - eps_threshold >= 0.1:\n",
@@ -569,12 +571,13 @@
         "num_episodes = 10000\n",
         "episode_durations = []\n",
         "steps_done = 0\n",
-        "\n",
+        "memory = ReplayMemory(5000)\n",
+        "policy_net.train()\n",
         "eps_to_actions = {}\n",
         "for i_episode in range(num_episodes):\n",
-        "\n",
+        "    episoe_states = []\n",
         "    eps_to_actions[i_episode] = []\n",
-        "    print(i_episode)\n",
+        "    #print(i_episode)\n",
         "    # Initialize the environment and state\n",
         "    env.reset()\n",
         "    #last_screen = get_screen().unsqueeze(0)\n",
@@ -586,6 +589,7 @@
         "        \n",
         "        eps_to_actions[i_episode].append(action)\n",
         "        _, reward, done, _ = env.step(action.item())\n",
+        "        episoe_states.append((state, reward))\n",
         "        reward = torch.tensor([reward], device=device)\n",
         "\n",
         "#         # Observe new state\n",
@@ -597,10 +601,10 @@
         "            diff = torch.sum(next_state - state).detach().cpu().numpy().item()\n",
         "            if diff == 0:\n",
         "              reward = torch.tensor([-0.2], device=device)\n",
-        "\n",
-        "            #next_state = current_screen - last_screen\n",
         "        else:\n",
         "            next_state = None\n",
+        "            # #todo: remove\n",
+        "            # break\n",
         "\n",
         "#         # Store the transition in memory\n",
         "        memory.push(state, action, next_state, reward)\n",
@@ -612,17 +616,65 @@
         "        optimize_model()\n",
         "        if done:\n",
         "            episode_durations.append(t + 1)\n",
-        "            plot_durations()\n",
+        "            #plot_durations()\n",
         "            break\n",
+        "\n",
+        "  # #todo: remove\n",
+        "  #   break\n",
         "    # Update the target network, copying all weights and biases in DQN\n",
         "    if i_episode % TARGET_UPDATE == 0:\n",
         "        target_net.load_state_dict(policy_net.state_dict())\n",
         "\n",
         "print('Complete')\n",
-        "env.render()\n",
+        "# env.render()\n",
         "env.close()\n",
         "plt.ioff()\n",
         "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a7hyAIGM0AEB"
+      },
+      "source": [
+        "# i_episode,  episode_durations[-30: ]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9hs9wuz4Rgu5"
+      },
+      "source": [
+        " EPS_END + (EPS_START - EPS_END) * math.exp(-1. * steps_done / EPS_DECAY)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pWXgVl2rYLGb"
+      },
+      "source": [
+        "policy_net.eval()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vLly-EyzJcbF"
+      },
+      "source": [
+        "x  = policy_net(state)\n",
+        "torch.argmax(x), x, target_net(state)"
       ],
       "execution_count": null,
       "outputs": []
@@ -644,7 +696,35 @@
         "id": "NOl5Tinsw9PK"
       },
       "source": [
-        "state = get_screen().unsqueeze(0)"
+        "state = get_screen().unsqueeze(0)\n",
+        "i2 = state.squeeze(0).squeeze(0) #.permute(1,2,0)\n",
+        "plt.gray()\n",
+        "plt.imshow(i2)\n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TOxpbN4lYp-8"
+      },
+      "source": [
+        "action = select_action(state)\n",
+        "action"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7ykF5grZYtNu"
+      },
+      "source": [
+        "_, reward, done, _ = env.step(action.item())\n",
+        "reward"
       ],
       "execution_count": null,
       "outputs": []
@@ -655,23 +735,11 @@
         "id": "jbCa03u6w-hR"
       },
       "source": [
-        "state.shape\n",
-        "\n",
-        "\n",
-        "i2 = state.squeeze(0).permute(1,2,0)\n",
-        "\n",
-        "plt.imshow(i2.numpy())"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "giIvlTJU6q1P"
-      },
-      "source": [
-        "policy_net(state)"
+        "next_state = get_screen()\n",
+        "i2 = next_state.squeeze(0).squeeze(0) \n",
+        "plt.gray()\n",
+        "plt.imshow(i2)\n",
+        "plt.show()"
       ],
       "execution_count": null,
       "outputs": []
@@ -684,17 +752,6 @@
       "source": [
         "action = select_action(state)\n",
         "action"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Ik0zCGHjyIBb"
-      },
-      "source": [
-        "# action = torch.tensor(5)"
       ],
       "execution_count": null,
       "outputs": []
@@ -717,7 +774,7 @@
         "id": "5LWCgKZnxmJM"
       },
       "source": [
-        "next_state = get_screen().unsqueeze(0)"
+        "policy_net(state)"
       ],
       "execution_count": null,
       "outputs": []
@@ -728,7 +785,12 @@
         "id": "71USqc_m62FS"
       },
       "source": [
-        ""
+        "i2 = next_state.squeeze(0).squeeze(0) #.permute(1,2,0)\n",
+        "# plt.imshow(i2, cmap=plt.cm.gray)\n",
+        "plt.gray()\n",
+        "plt.imshow(i2)\n",
+        "plt.show()\n",
+        "state = next_state"
       ],
       "execution_count": null,
       "outputs": []
@@ -740,7 +802,7 @@
       },
       "source": [
         "\n",
-        "i2 = state.squeeze(0).permute(1,2,0)\n",
+        "i2 = next_state.squeeze(0).permute(1,2,0)\n",
         "\n",
         "plt.imshow(i2.numpy())"
       ],
@@ -753,7 +815,7 @@
         "id": "B7grAme7x5vc"
       },
       "source": [
-        "EPS_END + (EPS_START - EPS_END) * math.exp(-1. * steps_done / EPS_DECAY), steps_done"
+        "state = next_state"
       ],
       "execution_count": null,
       "outputs": []
@@ -807,7 +869,7 @@
         "id": "qhSr1w1Q4MYk"
       },
       "source": [
-        "eps_to_actions[1][0:30]"
+        "eps_to_actions[3739][0:30]"
       ],
       "execution_count": null,
       "outputs": []
@@ -852,7 +914,7 @@
         "id": "RryY9rg68oUf"
       },
       "source": [
-        "episode_durations"
+        ""
       ],
       "execution_count": null,
       "outputs": []
